--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href="https://www.youtube.com/@bollinagarajuyadav/playlists"><span class="icon-youtube"></span></a></li>
-					  <li class="ftco-animate"><a href="linkedin.com/in/bollinagaraju"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/bollinagaraju/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://x.com/BY13952?t=fC8stW3CcLkcsauEYjcb1g&s=09"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.facebook.com/nagarajuyadav.bolli"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/ich_bin_nag/"><span class="icon-instagram"></span></a></li>
